--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@auth0/auth0-angular": "^1.8.0",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "bootstrap": "^4.5.0",
+    "ng-image-slider": "^2.8.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
